Update from https://github.com/thebesttv/eserver-static/commit/bf9febc077f1205c5fa6c47fec1e53a3b7d16f04

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-01 02:53 -->
+<!-- 2022-11-02 02:54 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org74844a3">1. 妙妙文章</a>
+<li><a href="#org1da3371">1. 妙妙文章</a>
 <ul>
-<li><a href="#org2124ffa">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org26b5f1d">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org6eb922b">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org5dca832">1.4. 关于编辑器</a></li>
-<li><a href="#org283c57e">1.5. 关于代码</a>
+<li><a href="#orgc732b7b">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orgbd6db38">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org2dd1e7a">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org82a0f24">1.4. 关于编辑器</a></li>
+<li><a href="#org50b6006">1.5. 关于代码</a>
 <ul>
-<li><a href="#orgc0294d6">1.5.1. Lisp</a></li>
+<li><a href="#orgf01b4d2">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org980d512">1.6. 关于CPU</a></li>
-<li><a href="#org10acda5">1.7. 关于算法</a>
+<li><a href="#orgdeaa719">1.6. 关于CPU</a></li>
+<li><a href="#orgfd74972">1.7. 关于算法</a>
 <ul>
-<li><a href="#org852d99c">1.7.1. 关于随机</a></li>
+<li><a href="#org9a0ebaf">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orgecaf2c3">1.8. 关于AI</a></li>
-<li><a href="#org3880bab">1.9. 关于软件</a>
+<li><a href="#org59a6f82">1.8. 关于AI</a></li>
+<li><a href="#org7355765">1.9. 关于软件</a>
 <ul>
-<li><a href="#orgfb6955e">1.9.1. SQLite</a></li>
+<li><a href="#orgbc2acb6">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org5f9b1f9">1.10. 关于workflow</a></li>
+<li><a href="#orgb180c8e">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org46adc44">2. 棒棒视频</a>
+<li><a href="#org9e0873b">2. 棒棒视频</a>
 <ul>
-<li><a href="#org49a7520">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org6b9dbee">2.2. 各种剧</a></li>
-<li><a href="#org9eb98f5">2.3. 电影</a></li>
+<li><a href="#orga1788c5">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgb59a291">2.2. 各种剧</a></li>
+<li><a href="#orgccfebe9">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgaac4255">3. 快乐游戏</a></li>
-<li><a href="#org611a456">4. 宝藏博主</a></li>
-<li><a href="#org6cb039a">5. 有意思的</a>
+<li><a href="#orga0dbe5a">3. 快乐游戏</a></li>
+<li><a href="#org683b5a3">4. 宝藏博主</a></li>
+<li><a href="#orgb252788">5. 有意思的</a>
 <ul>
-<li><a href="#org63be9c7">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgd51659e">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org5eebeb5">6. 我想玩的</a></li>
+<li><a href="#org650dfd0">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org74844a3" class="outline-2">
-<h2 id="org74844a3"><span class="section-number-2">1.</span> <a href="#org74844a3">妙妙文章</a></h2>
+<div id="outline-container-org1da3371" class="outline-2">
+<h2 id="org1da3371"><span class="section-number-2">1.</span> <a href="#org1da3371">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orgb2e3d52">
+<figure id="org81af4ef">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -495,8 +495,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org2124ffa" class="outline-3">
-<h3 id="org2124ffa"><span class="section-number-3">1.1.</span> <a href="#org2124ffa">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-orgc732b7b" class="outline-3">
+<h3 id="orgc732b7b"><span class="section-number-3">1.1.</span> <a href="#orgc732b7b">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-org26b5f1d" class="outline-3">
-<h3 id="org26b5f1d"><span class="section-number-3">1.2.</span> <a href="#org26b5f1d">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgbd6db38" class="outline-3">
+<h3 id="orgbd6db38"><span class="section-number-3">1.2.</span> <a href="#orgbd6db38">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -568,8 +568,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org6eb922b" class="outline-3">
-<h3 id="org6eb922b"><span class="section-number-3">1.3.</span> <a href="#org6eb922b">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org2dd1e7a" class="outline-3">
+<h3 id="org2dd1e7a"><span class="section-number-3">1.3.</span> <a href="#org2dd1e7a">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -603,8 +603,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org5dca832" class="outline-3">
-<h3 id="org5dca832"><span class="section-number-3">1.4.</span> <a href="#org5dca832">关于编辑器</a></h3>
+<div id="outline-container-org82a0f24" class="outline-3">
+<h3 id="org82a0f24"><span class="section-number-3">1.4.</span> <a href="#org82a0f24">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -620,8 +620,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org283c57e" class="outline-3">
-<h3 id="org283c57e"><span class="section-number-3">1.5.</span> <a href="#org283c57e">关于代码</a></h3>
+<div id="outline-container-org50b6006" class="outline-3">
+<h3 id="org50b6006"><span class="section-number-3">1.5.</span> <a href="#org50b6006">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -646,8 +646,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgc0294d6" class="outline-4">
-<h4 id="orgc0294d6"><span class="section-number-4">1.5.1.</span> <a href="#orgc0294d6">Lisp</a></h4>
+<div id="outline-container-orgf01b4d2" class="outline-4">
+<h4 id="orgf01b4d2"><span class="section-number-4">1.5.1.</span> <a href="#orgf01b4d2">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -670,8 +670,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org980d512" class="outline-3">
-<h3 id="org980d512"><span class="section-number-3">1.6.</span> <a href="#org980d512">关于CPU</a></h3>
+<div id="outline-container-orgdeaa719" class="outline-3">
+<h3 id="orgdeaa719"><span class="section-number-3">1.6.</span> <a href="#orgdeaa719">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -686,8 +686,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org10acda5" class="outline-3">
-<h3 id="org10acda5"><span class="section-number-3">1.7.</span> <a href="#org10acda5">关于算法</a></h3>
+<div id="outline-container-orgfd74972" class="outline-3">
+<h3 id="orgfd74972"><span class="section-number-3">1.7.</span> <a href="#orgfd74972">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -706,8 +706,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org852d99c" class="outline-4">
-<h4 id="org852d99c"><span class="section-number-4">1.7.1.</span> <a href="#org852d99c">关于随机</a></h4>
+<div id="outline-container-org9a0ebaf" class="outline-4">
+<h4 id="org9a0ebaf"><span class="section-number-4">1.7.1.</span> <a href="#org9a0ebaf">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -721,8 +721,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgecaf2c3" class="outline-3">
-<h3 id="orgecaf2c3"><span class="section-number-3">1.8.</span> <a href="#orgecaf2c3">关于AI</a></h3>
+<div id="outline-container-org59a6f82" class="outline-3">
+<h3 id="org59a6f82"><span class="section-number-3">1.8.</span> <a href="#org59a6f82">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -732,8 +732,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org3880bab" class="outline-3">
-<h3 id="org3880bab"><span class="section-number-3">1.9.</span> <a href="#org3880bab">关于软件</a></h3>
+<div id="outline-container-org7355765" class="outline-3">
+<h3 id="org7355765"><span class="section-number-3">1.9.</span> <a href="#org7355765">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -744,8 +744,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgfb6955e" class="outline-4">
-<h4 id="orgfb6955e"><span class="section-number-4">1.9.1.</span> <a href="#orgfb6955e">SQLite</a></h4>
+<div id="outline-container-orgbc2acb6" class="outline-4">
+<h4 id="orgbc2acb6"><span class="section-number-4">1.9.1.</span> <a href="#orgbc2acb6">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -759,8 +759,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org5f9b1f9" class="outline-3">
-<h3 id="org5f9b1f9"><span class="section-number-3">1.10.</span> <a href="#org5f9b1f9">关于workflow</a></h3>
+<div id="outline-container-orgb180c8e" class="outline-3">
+<h3 id="orgb180c8e"><span class="section-number-3">1.10.</span> <a href="#orgb180c8e">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -770,8 +770,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org46adc44" class="outline-2">
-<h2 id="org46adc44"><span class="section-number-2">2.</span> <a href="#org46adc44">棒棒视频</a></h2>
+<div id="outline-container-org9e0873b" class="outline-2">
+<h2 id="org9e0873b"><span class="section-number-2">2.</span> <a href="#org9e0873b">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -827,8 +827,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org49a7520" class="outline-3">
-<h3 id="org49a7520"><span class="section-number-3">2.1.</span> <a href="#org49a7520">Veritasium 真理元素</a></h3>
+<div id="outline-container-orga1788c5" class="outline-3">
+<h3 id="orga1788c5"><span class="section-number-3">2.1.</span> <a href="#orga1788c5">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -853,8 +853,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org6b9dbee" class="outline-3">
-<h3 id="org6b9dbee"><span class="section-number-3">2.2.</span> <a href="#org6b9dbee">各种剧</a></h3>
+<div id="outline-container-orgb59a291" class="outline-3">
+<h3 id="orgb59a291"><span class="section-number-3">2.2.</span> <a href="#orgb59a291">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -878,8 +878,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org9eb98f5" class="outline-3">
-<h3 id="org9eb98f5"><span class="section-number-3">2.3.</span> <a href="#org9eb98f5">电影</a></h3>
+<div id="outline-container-orgccfebe9" class="outline-3">
+<h3 id="orgccfebe9"><span class="section-number-3">2.3.</span> <a href="#orgccfebe9">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -914,8 +914,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgaac4255" class="outline-2">
-<h2 id="orgaac4255"><span class="section-number-2">3.</span> <a href="#orgaac4255">快乐游戏</a></h2>
+<div id="outline-container-orga0dbe5a" class="outline-2">
+<h2 id="orga0dbe5a"><span class="section-number-2">3.</span> <a href="#orga0dbe5a">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -945,8 +945,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org611a456" class="outline-2">
-<h2 id="org611a456"><span class="section-number-2">4.</span> <a href="#org611a456">宝藏博主</a></h2>
+<div id="outline-container-org683b5a3" class="outline-2">
+<h2 id="org683b5a3"><span class="section-number-2">4.</span> <a href="#org683b5a3">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -957,7 +957,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org9a75da3">
+<figure id="org526363b">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -965,8 +965,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org6cb039a" class="outline-2">
-<h2 id="org6cb039a"><span class="section-number-2">5.</span> <a href="#org6cb039a">有意思的</a></h2>
+<div id="outline-container-orgb252788" class="outline-2">
+<h2 id="orgb252788"><span class="section-number-2">5.</span> <a href="#orgb252788">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -998,8 +998,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org63be9c7" class="outline-3">
-<h3 id="org63be9c7"><span class="section-number-3">5.1.</span> <a href="#org63be9c7">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgd51659e" class="outline-3">
+<h3 id="orgd51659e"><span class="section-number-3">5.1.</span> <a href="#orgd51659e">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1011,8 +1011,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org5eebeb5" class="outline-2">
-<h2 id="org5eebeb5"><span class="section-number-2">6.</span> <a href="#org5eebeb5">我想玩的</a></h2>
+<div id="outline-container-org650dfd0" class="outline-2">
+<h2 id="org650dfd0"><span class="section-number-2">6.</span> <a href="#org650dfd0">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1035,7 +1035,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-29 09:22</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-01 02:53</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-02 02:54</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
