--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-01 02:53 -->
+<!-- 2022-11-02 02:54 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -46,12 +46,12 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc71e6a5">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#orgf58eb78">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#org0ef9130">1.1. window config &amp; register</a></li>
-<li><a href="#orgc501fcb">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#orgbff9939">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#orgf6189a7">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#orgd06c6fa">1.1. window config &amp; register</a></li>
+<li><a href="#org364f60c">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#org474e1f5">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#org7cfbbb8">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -59,12 +59,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgc71e6a5" class="outline-2">
-<h2 id="orgc71e6a5"><span class="section-number-2">1.</span> <a href="#orgc71e6a5">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-orgf58eb78" class="outline-2">
+<h2 id="orgf58eb78"><span class="section-number-2">1.</span> <a href="#orgf58eb78">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org0ef9130" class="outline-3">
-<h3 id="org0ef9130"><span class="section-number-3">1.1.</span> <a href="#org0ef9130">window config &amp; register</a></h3>
+<div id="outline-container-orgd06c6fa" class="outline-3">
+<h3 id="orgd06c6fa"><span class="section-number-3">1.1.</span> <a href="#orgd06c6fa">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -78,8 +78,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-orgc501fcb" class="outline-3">
-<h3 id="orgc501fcb"><span class="section-number-3">1.2.</span> <a href="#orgc501fcb"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-org364f60c" class="outline-3">
+<h3 id="org364f60c"><span class="section-number-3">1.2.</span> <a href="#org364f60c"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -102,8 +102,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgbff9939" class="outline-3">
-<h3 id="orgbff9939"><span class="section-number-3">1.3.</span> <a href="#orgbff9939"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-org474e1f5" class="outline-3">
+<h3 id="org474e1f5"><span class="section-number-3">1.3.</span> <a href="#org474e1f5"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -116,8 +116,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgf6189a7" class="outline-3">
-<h3 id="orgf6189a7"><span class="section-number-3">1.4.</span> <a href="#orgf6189a7"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-org7cfbbb8" class="outline-3">
+<h3 id="org7cfbbb8"><span class="section-number-3">1.4.</span> <a href="#org7cfbbb8"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -136,7 +136,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-01 02:53</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-02 02:54</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
