--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-01 02:53 -->
+<!-- 2022-11-02 02:54 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org125b13e">1. What is Vectored IO</a></li>
-<li><a href="#orgd56b9dd">2. Vectored IO in Linux</a></li>
-<li><a href="#orgdcb5767">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#org3ab91b5">4. Examples</a>
+<li><a href="#orgce0be07">1. What is Vectored IO</a></li>
+<li><a href="#org352094d">2. Vectored IO in Linux</a></li>
+<li><a href="#org57b11bb">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#orgbe97f62">4. Examples</a>
 <ul>
-<li><a href="#orgfa1d243">4.1. <code>write()</code></a></li>
-<li><a href="#orge56458a">4.2. <code>writev()</code></a></li>
+<li><a href="#org9c5ad23">4.1. <code>write()</code></a></li>
+<li><a href="#org1c73229">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-org125b13e" class="outline-2">
-<h2 id="org125b13e"><span class="section-number-2">1.</span> <a href="#org125b13e">What is Vectored IO</a></h2>
+<div id="outline-container-orgce0be07" class="outline-2">
+<h2 id="orgce0be07"><span class="section-number-2">1.</span> <a href="#orgce0be07">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-orgd56b9dd" class="outline-2">
-<h2 id="orgd56b9dd"><span class="section-number-2">2.</span> <a href="#orgd56b9dd">Vectored IO in Linux</a></h2>
+<div id="outline-container-org352094d" class="outline-2">
+<h2 id="org352094d"><span class="section-number-2">2.</span> <a href="#org352094d">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-orgdcb5767" class="outline-2">
-<h2 id="orgdcb5767"><span class="section-number-2">3.</span> <a href="#orgdcb5767">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-org57b11bb" class="outline-2">
+<h2 id="org57b11bb"><span class="section-number-2">3.</span> <a href="#org57b11bb">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-org3ab91b5" class="outline-2">
-<h2 id="org3ab91b5"><span class="section-number-2">4.</span> <a href="#org3ab91b5">Examples</a></h2>
+<div id="outline-container-orgbe97f62" class="outline-2">
+<h2 id="orgbe97f62"><span class="section-number-2">4.</span> <a href="#orgbe97f62">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orgfa1d243" class="outline-3">
-<h3 id="orgfa1d243"><span class="section-number-3">4.1.</span> <a href="#orgfa1d243"><code>write()</code></a></h3>
+<div id="outline-container-org9c5ad23" class="outline-3">
+<h3 id="org9c5ad23"><span class="section-number-3">4.1.</span> <a href="#org9c5ad23"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-orge56458a" class="outline-3">
-<h3 id="orge56458a"><span class="section-number-3">4.2.</span> <a href="#orge56458a"><code>writev()</code></a></h3>
+<div id="outline-container-org1c73229" class="outline-3">
+<h3 id="org1c73229"><span class="section-number-3">4.2.</span> <a href="#org1c73229"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,7 +207,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-01 02:53</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-02 02:54</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
