Update from https://github.com/thebesttv/eserver-static/commit/bf9febc077f1205c5fa6c47fec1e53a3b7d16f04

--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-02 02:54 -->
+<!-- 2022-11-03 02:50 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -46,17 +46,17 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org0baa0b3">1. 一大早</a></li>
-<li><a href="#orgdc1b717">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#org5accea8">3. 科研训练</a></li>
-<li><a href="#org55523bf">4. 520</a></li>
+<li><a href="#orgeb972ad">1. 一大早</a></li>
+<li><a href="#org566d36c">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#orge90f2fa">3. 科研训练</a></li>
+<li><a href="#orgd775a53">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org0baa0b3" class="outline-2">
-<h2 id="org0baa0b3"><span class="section-number-2">1.</span> <a href="#org0baa0b3">一大早</a></h2>
+<div id="outline-container-orgeb972ad" class="outline-2">
+<h2 id="orgeb972ad"><span class="section-number-2">1.</span> <a href="#orgeb972ad">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -65,8 +65,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgdc1b717" class="outline-2">
-<h2 id="orgdc1b717"><span class="section-number-2">2.</span> <a href="#orgdc1b717">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-org566d36c" class="outline-2">
+<h2 id="org566d36c"><span class="section-number-2">2.</span> <a href="#org566d36c">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -92,8 +92,8 @@
 </div>
 </div>
 
-<div id="outline-container-org5accea8" class="outline-2">
-<h2 id="org5accea8"><span class="section-number-2">3.</span> <a href="#org5accea8">科研训练</a></h2>
+<div id="outline-container-orge90f2fa" class="outline-2">
+<h2 id="orge90f2fa"><span class="section-number-2">3.</span> <a href="#orge90f2fa">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -101,8 +101,8 @@
 </div>
 </div>
 
-<div id="outline-container-org55523bf" class="outline-2">
-<h2 id="org55523bf"><span class="section-number-2">4.</span> <a href="#org55523bf">520</a></h2>
+<div id="outline-container-orgd775a53" class="outline-2">
+<h2 id="orgd775a53"><span class="section-number-2">4.</span> <a href="#orgd775a53">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -116,7 +116,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-02 02:54</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-03 02:50</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-19.org">content/daily/2021-05-19.org</a></td></tr>
 </table>
